Add passanger-agreement PDF to confirmation mail